# learn-llm-finetuning-rag

./: .gitignore  pyproject.toml  readme.txt
chap1/: __init__.py  llm-based-use.py  llm-based-use2.py  llm-based-use3.py  llm-based-use4.py
chap2/: check-collator.py  generate-from-saved-model.py  llm-learn-base.py  llm-learn-trainer-with-EarlyStopping.py  llm-learn-trainer.py  mk-traininig-fies-from-ksj.py  test.txt  train.txt  val.txt
chap3/: check-dokky.py  generate-from-inst-model.py  instruction-tuning-base.py
chap4/: check-adapter-parts.py  generate-from-lora-model.py  generate-from-prompt-tuning-model.py  generate-from-qlora-model.py  prompt-tuning.py  train-lora.py  train-qlora.py
chap5/: bm25reteiver-example.py  build-mywikidb-bm25.py  build-mywikidb.py  get-text-from-url-by-dl.py  get-text-from-url.py  joseito.txt  mk-rag-db-from-text.py  my-preprocess-func.py  plain-llm.py  rag-another-template.py  rag-base-mywikidb-bm25.py  rag-base-mywikidb.py  rag-base.py  rag-hyde-openai.py  rag-hyde-openai2.py  rag-openai.py  rag-quantization-mywikidb.py  rag-wikipedia-openai.py  rag-wikipedia.py  retriever-local-bm25.py
chap5/joseito.db/: index.faiss  index.pkl
chap6/: chainlit-base.py  chainlit-llm-mock.py  chainlit-llm-openai.py  chainlit-public-llm.py  chainlit-rag-base-mywikidb.py
